sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:5: error: '<-' expected but '=' found.
		for(i=0;i<max-1;i++){
                     ^AlgBubbleSort1:5: error: illegal start of simple expression
		for(i=0;i<max-1;i++){
                       ^AlgBubbleSort1:5: error: '<-' expected but ';' found.
		for(i=0;i<max-1;i++){
                               ^AlgBubbleSort1:5: error: illegal start of simple pattern
		for(i=0;i<max-1;i++){
                                   ^AlgBubbleSort1:12: error: illegal start of simple expression
	}
        ^