sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
	while(test)
	{
		for(i=0;i<max-1;i++){
			if(tab[i]>tab[i+1]){
				temp=tab[i];
				tab[i]=tab[i+1];
				tab[i+1]=temp;
			}
		}
	}
}
